# CIFAR10_training

./: .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json  download_cifar10.py
.github/workflows/: docs.yml  publish-to-pypi.yml
data/pytorch/: cnn_optimization.db
data/pytorch/performance_results/: augmented_cnn_results.pkl  cnn_results.pkl  dnn_results.pkl  optimized_cnn_results.pkl  rgb_cnn_results.pkl
docs/: DEPLOYMENT.md  README.md  serve.sh
docs/source/: conf.py  index.rst  installation.rst  quickstart.rst  quickstart.rst.backup
docs/source/api/: data.rst  evaluation.rst  hyperparameter_optimization.rst  index.rst  plotting.rst  training.rst
docs/source/notebooks/: index.rst
notebooks/: 01-DNN.ipynb  02-CNN.ipynb  03-RGB-CNN.ipynb  03-optimized-CNN.ipynb  04-optimized-CNN.ipynb  05-augmented-CNN.ipynb  06-resnet50.ipynb  06-results.ipynb
notebooks/functions/: evaluation.py  training.py
src/: data_acquisition.py
src/CIFAR10-pytorch/: training.py
src/cifar10_tools/pytorch/: __init__.py  data.py  hyperparameter_optimization.py  plotting.py  training.py
src/image_classification_tools/: README.md  __init__.py
src/image_classification_tools/pytorch/: __init__.py  data.py  evaluation.py  hyperparameter_optimization.py  plotting.py  training.py
